--- a/experience.html
+++ b/experience.html
@@ -80,11 +80,13 @@
           </div>
       </div>
     </div>
-    <div class="slideContainer">
+    <div class = "expContent">
+      <h5 style = "padding: 0 5vw;">Internships and Activities</h5>
+      <div class="slideContainer">
         <div class="img" id = "arrow">
             <i class="fa fa-caret-right" aria-hidden="true"></i>
         </div> 
-        <div class = "two-thirds column">
+        <div class = "two-thirds column" style="padding: 1vh 0;">
             <ul class="exp-description">
                 <li>
                   <h6>Description: <br>
@@ -104,13 +106,13 @@
                 </li>
               </ul>
         </div>
-        <div class = "one-third column">
+        <div class = "one-third column" style="padding: 1vh 0;">
           <img src="" id ="refImg1">
           <img src="" id ="refImg2">
+          <p id="cap"></p>
         </div>
     </div>
-    <div class = "expContent">
-      <div class = "row">
+      <div class = "row" style = "padding: 0 5vw;">
           <div class = "one-quarter column u-text-center">
             <img src="images/sdpride.png" class = "img" id="sdpride">
           </div>
@@ -124,7 +126,7 @@
             <img src="images/acluRed.png" class = "img" id="aclu">
           </div>
       </div>
-      <div class = "row">
+      <div class = "row" style = "padding: 0 5vw;">
         <div class = "one-quarter column u-text-center">
           <img src="images/ljpc.png" class = "img" id="ljpc">
         </div>
@@ -137,7 +139,83 @@
         <div class = "one-quarter column u-text-center">
           <img src="images/bwcs.png" class = "img" id="bwcs">
         </div>
-    </div>
+      </div>
+
+      <h5 style = "padding: 0 5vw;">Relevant Courses</h5>
+      <div class = "courses" style = "padding: 0 5vw;">
+        <div class = "course">
+            <div>
+              <h6>Applied Partial Differential Equations I</h6>
+              <p>
+                Described problems quantitatively as PDEs, discovered how seemingly unrelated contexts can result in similar equations; 
+                and developed methods for solution using analytical, numerical or qualitative methods. Contexts include first order equations; 
+                the second order wave equation and problems involving diffusion processes; steady state balances for systems in two or three 
+                dimensions; together with insights from theory.
+              </p>
+              <p>
+                Grade: A
+              </p>
+            </div>
+        </div>  
+        <div class = "course">
+          <div>
+              <h6>Statistical Inference I</h6>
+              <h6 id="invisible">word</h6>
+              <p>
+                An integrated first course in mathematical statistics. Covered probability and statistics, integrated with its probabilistic foundation. 
+                Specific topics include probability spaces, discrete and continuous random variables, methods for parameter estimation, confidence intervals, 
+                and hypothesis testing.
+              </p>
+              <p>
+                Grade: A
+              </p>
+          </div>
+        </div>  
+        <div class = "course">
+          <div>
+            <h6>Computer Science: An Integrated Introduction (CS0170)</h6>
+            <p>
+              Teaches functional programming paradigm through the languages Racket and ML.
+              All of the following fundamental computer science techniques are integrated into the course material: 
+              algorithms, data structures, analysis, problem solving, abstract reasoning, and collaboration. 
+              Concrete examples are drawn from different subareas of computer science: arbitrary-precision arithmetic, 
+              natural language processing, databases, and strategic games.
+            </p>
+            <p>
+              Grade: A
+            </p>
+          </div>
+        </div>
+        <div class = "course">
+          <div>
+            <h6>Computer Science: An Integrated Introduction</h6>
+            <p>
+              A continuation of CSCI 0170. Learned to program in Java while continuing to develop algorithmic and analytic skills. 
+              Emphasis is placed on object-oriented design, imperative programming, and the implementation and use of data structures. 
+              Examples are drawn from such areas as databases, strategy games, web programming, graphical user interfaces, route finding, 
+              and data compression. Lab work done with the assistance of TAs.
+            </p>
+            <p>
+              Grade: A
+            </p>
+          </div>
+        </div>
+        <div class = "course">
+          <div>
+            <h6>Applied Ordinary Differential Equations</h6>
+            <p>
+              Comprehensive introduction to ordinary differential equations and their applications. Demonstrated how applied mathematicians 
+              use ordinary differential equations to solve practical applications, from understanding the underlying problem, creating a 
+              differential-equations model, solving the model using analytical, numerical, or qualitative methods, and interpreting the 
+              findings in terms of the original problem. We will also learn about the underlying rigorous theoretical foundations of 
+              differential equations. 
+            </p>
+            <p>
+              Grade: A
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
 <!-- End Document
