--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
             </p>
             <p>
               December 2019 <br>
-              Language: ReasonML <br>
+              Language: ML <br>
               Focus: Artifical Intelligence, Softcoding <br>
               Team: David Doan
             </p>
@@ -139,14 +139,14 @@
           <div>
             <h6>Rackette</h6>
             <p>
-                Interpreter that takes in a program written in Racket as a string and processes it in ReasonML
+                Interpreter that takes in a program written in Racket as a string and processes it in ML
                 to produce results. It handles definitions, conditionals, logic, let expressions,
                 procedure-application expressions, anonymous functions, and nesting. The interpreter is split into 
                 components that parse, evaluate, and converts the result back into a string.
             </p>
             <p>
               November 2019 <br>
-              Language: ReasonML <br>
+              Language: ML <br>
               Focus: Language Processing, Evaluation, Top Level and Local Environments <br>
               Team: Milan Samardziski
             </p>
