--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
         <h6 id = "clickDirection">Click the lamp to turn it on.</h6>
         <div class = "icons">
-            <i class="fa fa-envelope" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D" 
-              onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
+            <!-- <i class="fa fa-envelope" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D" 
+              onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i> -->
             <a href="https://www.linkedin.com/in/claraguo" target="_blank">
               <i class="fa fa-linkedin" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D"
                 onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
